[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philosofool"
version = "0.0.1"
authors = [
  { name="S.J. Lenhart", email="lenhart.lenhart@gmail.com" },
]
description = "Utilities for Python and data science in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/philosofool/phi-utils"
"Bug Tracker" = "https://github.com/philosofool/phi-utils/issues"